Polishing the blog

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,7 +36,7 @@ import ThemeSwitcher from "./ThemeSwitcher.astro";
 				<li>
 					<a
 						class="btn btn-ghost"
-						href="https://github.com/your-username"
+						href="https://github.com/anisikram"
 						target="_blank"
 						rel="noopener noreferrer"
 						aria-label="GitHub"
@@ -57,7 +57,7 @@ import ThemeSwitcher from "./ThemeSwitcher.astro";
 				<li>
 					<a
 						class="btn btn-ghost"
-						href="https://linkedin.com/in/your-username"
+						href="https://www.linkedin.com/in/anis-ikram-1ab910146/"
 						target="_blank"
 						rel="noopener noreferrer"
 						aria-label="LinkedIn"
@@ -109,7 +109,7 @@ import ThemeSwitcher from "./ThemeSwitcher.astro";
 			<li>
 				<a
 					class="btn btn-ghost"
-					href="https://github.com/your-username"
+					href="https://github.com/anisikram"
 					target="_blank"
 					rel="noopener noreferrer"
 					aria-label="GitHub"
@@ -130,7 +130,7 @@ import ThemeSwitcher from "./ThemeSwitcher.astro";
 			<li>
 				<a
 					class="btn btn-ghost"
-					href="https://linkedin.com/in/your-username"
+					href="https://www.linkedin.com/in/anis-ikram-1ab910146/"
 					target="_blank"
 					rel="noopener noreferrer"
 					aria-label="LinkedIn"
