Refining about me section

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,47 @@
 ---
-import BlogLayout from '../layouts/BlogLayout.astro';
+import BlogLayout from "../layouts/BlogLayout.astro";
 ---
+
 <BlogLayout title="À propos de moi">
   <div class="prose">
     <h1>À propos de moi</h1>
-    <p>Bonjour, je suis Anis Ikram, un développeur passionné qui aime construire des choses pour le web.</p>
-    <p>Ceci est mon blog personnel où je partage mes réflexions sur la technologie, la programmation et tout ce qui se trouve entre les deux.</p>
+    <p>
+      Bonjour, moi c’est Anis&nbsp;Ikram. Mon histoire avec l’informatique a
+      commencé vers 12&nbsp;ans, quand je rêvais de créer <strong>LE</strong> jeu
+      vidéo qui allait révolutionner le monde… et qui est finalement resté bien au
+      chaud dans ma tête (et quelques lignes de code oubliées). Pour me consoler,
+      je me suis lancé dans la création de sites web dédiés à mes mangas préférés&nbsp;–
+      preuve que, même jeune, j’avais déjà un goût prononcé pour les univers imaginaires
+      et le pixel parfait.
+    </p>
+  <br>
+    <p>
+      Entre deux lignes de code, vous me trouverez souvent sur un terrain de
+      sport. J’aime tout ce qui bouge, mais mon premier amour reste le <strong
+        >rugby</strong
+      >, que je pratique depuis mes 15&nbsp;ans. Rien de tel qu’une bonne mêlée
+      pour apprendre l’esprit d’équipe et la persévérance… des qualités bien
+      utiles quand il s’agit de déboguer un programme récalcitrant.
+    </p>
+  <br>
+    <p>
+      En tant que développeur, je suis passionné par les pratiques
+      «&nbsp;craft&nbsp;»&nbsp;:&nbsp;<strong
+        >TDD, Clean Code et Domain‑Driven Design</strong
+      > sont mes terrains de jeu préférés. J’essaie d’organiser mon code comme un
+      artisan range ses outils, et j’aime démystifier des concepts que j’ai longtemps
+      mal interprétés. Mais je reste convaincu que l’on apprend tous les jours&nbsp;:
+      je n’ai pas la prétention de tout savoir ni d’être un expert absolu.
+    </p>
+  <br>
+    <p>
+      C’est dans cet état d’esprit que j’ai créé ce blog. Je souhaite partager
+      mes réflexions, mes découvertes et mes expériences, qu’elles soient
+      techniques ou plus personnelles. Si vous tombez sur une erreur, un
+      raccourci douteux ou si vous pensez qu’un sujet mérite d’être approfondi, <strong
+        >n’hésitez pas à me contacter</strong
+      >&nbsp;: je serai ravi d’échanger et d’enrichir mes articles grâce à vos
+      retours. Après tout, c’est en partageant qu’on progresse !
+    </p>
   </div>
 </BlogLayout>
